WebStore/src/objects/ItemCategory__c.object
<CustomObject>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(  Imeg_URL__c  , &quot;IMG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imeg_URL__c</fullName>
        <label>Imeg URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <summarizedField>Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Item__c.ItemCategory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>ItemCategory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ItemCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ItemCategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>